# cpptbot

./: .gitignore  CMakeLists.txt  README.md  cppbot.hpp  cpptbot.hpp
.devcontainer/: Dockerfile  devcontainer.json
include/: cpptbot.hpp
sample/: CMakeLists.txt  main.cpp
src/: cpptbot.cpp
